Fix sub-menu being hidden when there is a scrollbar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1309,6 +1309,7 @@ html.dark {
   position: absolute;
   left: 0;
   padding-top: 54px;
+  display: none;
   width: min(1240px, 100%);
 }
 .dropdown__inner {
@@ -1383,10 +1384,10 @@ html.dark {
 .menu-column__list {
   margin-top: 19px;
 }
-.menu-column__item:hover .sub-menu {
+.menu-column__item--active .sub-menu {
   display: grid;
 }
-.menu-column__item:hover > .menu-column__link {
+.menu-column__item--active > .menu-column__link, .menu-column__item:hover > .menu-column__link {
   color: #0071DC;
   font-weight: 500;
 }
